# dfag

./: Dockerfile  Dockerfile.celery  README.md  Readme.md  connect.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
controllers/: text_to_speech_controller.py
dfag_code/: main.py
dfag_code/controllers/: text_to_speech_controller.py
dfag_code/views/: main_menu.py  process_visualization_view.py
static/: static.html  static1.html  xinxin.html
views/: main_menu.py  text_to_speech_view.py
