[project]
name = "dfag"
version = "0.1.0"
description = "东方暗果"
authors = [
    {name = "mutou12",email = "369584771@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "edge-tts (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
