[project]
name = "dfag"
version = "0.1.0"
description = "东方暗果"
authors = [{ name = "mutou12", email = "369584771@qq.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "edge-tts (>=7.0.0,<8.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
]

[tool.uv]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.sdist]
include = ["dfag_code"]

[tool.hatch.build.targets.wheel]
include = ["dfag_code"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

